--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "nestjs-zod": "^5.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "ping": "^0.4.4",
@@ -46,6 +47,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "ssh2": "^1.16.0",
+    "ssh2-sftp-client": "^12.0.1",
+    "ulid": "^3.0.1",
     "unzipper": "^0.12.3",
     "zod": "^4.0.13"
   },
