--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "bull": "^4.16.5",
     "cheerio": "^1.1.1",
     "drizzle-orm": "^0.44.2",
+    "form-data": "^4.0.4",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "nestjs-zod": "^5.0.1",
+    "p-limit": "^7.2.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "ping": "^0.4.4",
